--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\"",
     "dev": "tsc-watch --onSuccess \"npm run install-package\"",
     "watch": "tsc -w",
     "install-package": "npm i . -g && npm link"
