--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,8 +16,8 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - run: npm test
       - run: tsc
+      - run: npm test
 
   publish-npm:
     needs: build
@@ -29,6 +29,7 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: tsc
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
