--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "addt",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "bin/index.js",
   "scripts": {
@@ -18,6 +18,9 @@
   "devDependencies": {
     "@types/node": "16.11.43",
     "@types/yarnpkg__lockfile": "1.1.5",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
     "typescript": "4.7.4"
   },
   "dependencies": {
