--- a/package.json
+++ b/package.json
@@ -23,7 +23,5 @@
     "eslint": "^8.27.0",
     "typescript": "4.7.4"
   },
-  "dependencies": {
-    "@yarnpkg/lockfile": "1.1.0"
-  }
+  "dependencies": {}
 }
