--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "bin": {
     "addt": "./bin/index.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "types",
+    "typescript",
+    "package",
+    "npm",
+    "yarn"
+  ],
+  "author": "Xpo Development",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "16.11.43",
@@ -23,5 +29,13 @@
     "eslint": "^8.27.0",
     "typescript": "4.7.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "homepage": "https://github.com/xpodev/addt#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xpodev/addt.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xpodev/addt/issues"
+  }
 }
